--- a/styles.css
+++ b/styles.css
@@ -21,6 +21,7 @@ main {
     margin-left: auto;
     margin-right: auto;
     padding-top: 28px;
+    text-align: center;
 }
 
 .login_padding{
@@ -35,17 +36,16 @@ main {
 
 .form_container {
     display: block;
-    margin-left: auto;
-    margin-right: auto;
+
     flex: 0 0 40%;
     text-align: center;
     background-color: #ffffff;
     border: none;
     border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1), 0 8px 16px rgba(0, 0, 0, 0.1);
-    margin-bottom: 30px;
+    margin: auto;
     padding: 20px;
-    max-width: 400px;
+    width: 396px;
 }
 
  .form_container input, .form_container .login_button {
@@ -53,13 +53,13 @@ main {
     margin: 5px 0;
     height: 45px;
     vertical-align: middle;
-    font-size: 16px;
+    font-size: 17px;
 }
 
  .form_container input {
     border: 1px solid #dddfe2;
     color: #1d2129;
-    padding: 0 8px;
+    padding: 14px 16px;
     outline: none;
     border-radius: 6px;
 }
